Parcial1/.metadata/.plugins/org.eclipse.cdt.ui/Parcial_Labo.build.log
19:30:10 **** Incremental Build of configuration Debug for project Parcial_Labo ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Inputs.o" "..\\src\\Inputs.c" 
In file included from ..\src\Inputs.c:6:
..\src\Inputs.h:9:2: error: unknown type name 'eLocalidad'
    9 |  eLocalidad listaLocalidad[50];
      |  ^~~~~~~~~~

19:30:10 Build Failed. 1 errors, 0 warnings. (took 139ms)

